[package]
name = "sqlite3-editor"
version = "1.0.183"
edition = "2021"

[features]
sqlite = ["rusqlite/bundled"]
sqlcipher = ["rusqlite/bundled-sqlcipher-vendored-openssl"]

[dependencies]
clap = { version = "4.4.3", features = ["derive"] }
lazy_static = "1.4.0"
percent-encoding = "2.3.0"
regex = "1.9.5"
rmp = "0.8.12"
rmp-serde = "1.1.2"
serde = { version = "1.0.188", features = ["derive", "rc"] }
serde_json = "1.0.107"
serde-transcode = "1.1.1"
sqlparser = "0.37.0"
csv = "1.2.2"
base64 = "0.21.4"
hex = "0.4.3"
ts-rs = "7.0.0"
rust_xlsxwriter = "0.52.0"

[dependencies.rusqlite]
git = "https://github.com/yy0931/rusqlite.git"
branch = "master"
features = ["functions", "load_extension", "modern_sqlite"]

[dev-dependencies]
tempfile = "3.8.0"

[profile.release]
strip = true       # 8.2MB -> 7.0MB
lto = true         # 7.0MB -> 6.2MB
opt-level = "z"    # 6.2MB -> 4.3MB
codegen-units = 1  # 4.3MB -> 4.2MB
# Do not use "panic = "abort" as it causes the executable to throw STATUS_ENTRYPOINT_NOT_FOUND on Windows 7.
